--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -9,7 +9,7 @@
     display: flex;
     height: 5rem;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 16px;
     gap: 1rem;
     align-items: center;
     justify-content: center;
@@ -20,7 +20,7 @@
     width: 3rem;
 }
 .logo>span{
-    color: var(--pink);
+    color: black
 }
 .menu{
     margin-top: 4rem;
@@ -48,7 +48,7 @@
     content: '';
     width: 8px;
     height: 100%;
-    background: var(--pink);
+    background: #017143;
     margin-right: calc(1rem - 8px);
 }
 .menu .menuItem:last-child{
